index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  width: 100vw;
}

header {
  width: 100%;
  height: auto;
}

.heading-pic-container {
  height: auto;
  width: 100%;
  padding: 1.5rem;
}

.profile-img {
  position: relative;
  display: block;
  max-width: 100%;
  height: auto;
  margin: 0 auto;
  z-index: 3;
}

.diagonal-square-background {
  position: absolute;
  width: 200px;
  height: 200px;
  background-color: rgb(16, 91, 221);
  transform: rotate(-5deg) translateY(-30%) scale(3);
  z-index: 2;
}

.heading-title {
  font-size: 2rem;
  text-align: center;
  margin-bottom: 1rem;
  text-align: center;
}

.heading-desc {
  margin-bottom: 1rem;
}

.name {
  color: antiquewhite;
  position: absolute;
  z-index: 4;
  font-size: 3rem;
  top: 5%;
  left: 45%;
}

svg {
  height: 1.5rem;
  width: 1.5rem;
}

.socialmedia-div {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.main-title-container {
  margin-top: 5rem;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.main-title {
  text-align: center;
  font-size: 2rem;
}

.project-container-div {
  margin-top: 3rem;
  width: 300px;
  height: auto;
  box-shadow: 0 2px 2px 0;
}

.name-links-div {
  width: 100%;
  height: 1.5rem;
  margin-top: 1rem;
  padding: 0 10px 0 10px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.project-links {
  display: flex;
  height: auto;
  flex-direction: row;
  align-items: center;
  width: 3rem;
  justify-content: space-between;
}

.project-title {
  font-size: 1.5rem;
}

.project-desc {
  padding: 0 10px 0 10px;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.img-container {
  position: relative;
  width: 300px;
  height: 300px;
}

.project-screenshot {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  font-size: 1.5rem;
  color: antiquewhite;
}

#img-1 {
  background-color: rgb(10, 161, 111);
}

#img-2 {
  background-color: darkorange;
}

#img-3 {
  background-color: blueviolet;
}

#img-4 {
  background-color: darkgreen;
}

#img-5 {
  background-color: fuchsia;
}

#img-6 {
  background-color: lightslategray;
}

footer {
  margin-top: 5rem;
  background-color: rgb(10, 161, 111);
  width: 100%;
  height: fit-content;
  padding: 1rem;
  text-align: center;
  color: antiquewhite;
}

.footer-title {
  font-size: 2rem;
  margin-bottom: 1rem;
}

p {
  font-size: 1.5rem;
}

.footer-img-container {
  margin-top: 1rem;
  width: 100%;
  padding: 1rem;
  display: flex;
  justify-content: center;
}

.footer-img-container img {
  max-width: 100%;
  height: auto;
  display: block;
}

